@@ -1,22 +1,26 @@
 package pl.coderslab.budgetmanager.web.controller;
 
-import jakarta.validation.Valid;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
 import org.springframework.validation.BindingResult;
+import org.springframework.validation.annotation.Validated;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.ModelAttribute;
 import org.springframework.web.bind.annotation.PostMapping;
 import pl.coderslab.budgetmanager.model.dao.CategoryDao;
 import pl.coderslab.budgetmanager.model.dao.OwnerDao;
 import pl.coderslab.budgetmanager.model.dao.ValueDao;
+import pl.coderslab.budgetmanager.model.data.Category;
 import pl.coderslab.budgetmanager.model.data.Owner;
+import pl.coderslab.budgetmanager.model.data.Type;
 import pl.coderslab.budgetmanager.model.data.Value;
 
-import java.util.Collection;
+import javax.validation.Valid;
+import java.util.Arrays;
 import java.util.List;
 
 @Controller
+@Validated
 public class ValueMvcController {
 
     private final ValueDao valueDao;
@@ -32,12 +36,17 @@ public class ValueMvcController {
     }
 
     @ModelAttribute("categories")
-    public Collection<String> categories() {
-        return List.of("Codzienne wydatki",
-                "Dom i rachunki", "Dzieci", "Finanse i ubezpieczenia",
-                "Firmowe", "Inwestycje", "Okazjonalne wydaki", "Rozrywka i edukacja",
-                "Samochód i transport", "Wakacje i podróże", "Wypłata gotówki",
-                "Zdrowie i uroda", "Pozostałe wydatki");
+    public List<Category> categories() {
+//        return List.of("Codzienne wydatki",
+//                "Dom i rachunki", "Dzieci", "Finanse i ubezpieczenia",
+//                "Firmowe", "Inwestycje", "Okazjonalne wydaki", "Rozrywka i edukacja",
+//                "Samochód i transport", "Wakacje i podróże", "Wypłata gotówki",
+//                "Zdrowie i uroda", "Pozostałe wydatki");
+        return Arrays.asList(Category.values());
+    }
+    @ModelAttribute("types")
+    public List<Type> types() {
+        return Arrays.asList(Type.values());
     }
 
     @ModelAttribute("owners")
@@ -48,7 +57,7 @@ public class ValueMvcController {
     @GetMapping("/add-value")
     public String showAddValueForm(Model model) {
         model.addAttribute("value", new Value());
-        return "value/add";
+        return "values/add";
     }
 
     @PostMapping("/add-value")
@@ -62,17 +71,17 @@ public class ValueMvcController {
 
     @GetMapping("/list-values")
     public String showListValues(Model model) {
-        model.addAttribute("value", valueDao.findAllWithDetails());
+        model.addAttribute("values", valueDao.findAllWithDetails());
         return "values/list";
     }
 
-    @GetMapping("/delete-book")
-    public String showDeleteBook(Long id, Model model) {
+    @GetMapping("/delete-value")
+    public String showDeleteValue(Long id, Model model) {
         model.addAttribute("value", valueDao.findWithOwnersById(id));
         return "values/delete";
     }
 
-    @PostMapping("/delete-book")
+    @PostMapping("/delete-value")
     public String processDeleteValue(Long id) {
         valueDao.deleteById(id);
         return "redirect:/list-values";
@@ -93,6 +102,7 @@ public class ValueMvcController {
         dbValue.setValue(value.getValue());
         dbValue.setOwners(value.getOwners());
         dbValue.setDate(value.getDate());
+        dbValue.setCategory(value.getCategory());
         dbValue.setType(value.getType());
         valueDao.update(dbValue);
         return "redirect:/list-values";
